--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -81,7 +81,7 @@ body {
 /* modified navbar style */
 
 .navbar {
-    background-color: rgba(181, 127, 73, 0.4); 
+    background-color: rgb(132, 104, 75); 
     position: fixed;
     width: 100vw;
     z-index: 1;
@@ -94,6 +94,10 @@ body {
 }
 
 /* heavy equipments */
+.boxes img{
+    width: 280px;
+    height: 380px;
+}
 .p-container {
     display: flex;
     flex-direction: row;
@@ -129,9 +133,10 @@ body {
     margin-left: 5px;
 }
 .text-container h3{
-    max-width: 580px;
-    min-width: 400px;
+    width: 40rem;
+    min-width: 200px;
     margin-left: 23rem;
+    margin-bottom: 3rem;
     text-align: center;
     padding: 0 1rem;
 }
@@ -224,6 +229,14 @@ footer .footer-container{
         display: flex;
         flex-direction: column;
     }
+    #body-container h2{
+        font-size: 1.8rem;
+    }
+    .services-p{
+        width: 30rem;
+        font-size: .9rem;
+        text-align: justify;
+    }
     .container-project{
         width: 97%;
     }
@@ -244,7 +257,13 @@ footer .footer-container{
         width: 100vw;
     }
     .corevalues .value-containers h1{
-        font-size: x-large;
+        font-size: large;
+    }
+    .display-6{
+        font-size: .2rem;
+    }
+    .head-container, .body-container{
+        font-size: 1rem;
     }
     .logo-container img {
         margin-top: 1rem;
@@ -271,9 +290,12 @@ footer .footer-container{
         width: 80%;
     }
     .text-container h3 {
-        margin-left: auto; 
-        margin-right: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         text-align: center; 
+        margin: 0 auto;
+        margin-bottom: 2rem;
     }
     .full-service,
     .delivery,
@@ -298,10 +320,16 @@ footer .footer-container{
     .equipment-box{
         display: flex;
         flex-direction: column;
-        padding-left: 4rem;
     }
     .boxes{
-        margin: .5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+    .service-container{
+        margin-left: auto;
     }
     footer .container h4, footer .container h5{
         font-size: 1rem;
@@ -334,163 +362,232 @@ footer .footer-container{
 
 /* Media query for Mobile */
 @media screen and (min-width: 300px) and (max-width: 426px) {
-    body{
-        width: 100vw;
-        margin: 0;
-        padding: auto;
+    *{
+        box-sizing: border-box;
     }
-    .container-fluid .landing{
-        background-size: cover;
+    #body-container{
+        height: auto;
+        width: fit-content;
     }
-    .carousel-item img{
-        height: 50vh;
+    .logo-container img{
+        width: 100px;
+        height: auto;
     }
-    .para-contain{
-        text-align: center;
+    /* .text-center{
+        width: 200px;
+        height: auto;
+    } */
+    .text-center img{
+        width: 6rem;
+        height: auto;
     }
-    .p-container {
-        flex-direction: column; 
-        align-items: center;
-    }
-    .service-caption h2 {
-        margin-left: 0; 
-        text-align: center; 
-    }
-    .description {
-        margin-left: auto; 
-        margin-right: auto;
-        text-align: center; 
-        width: 80%;
-    }
-    .text-container h3 {
-        margin-left: auto; 
-        margin-right: auto;
-        text-align: center; 
-    }
-    .full-service,
-    .delivery,
-    .quality {
-        width: 80%; 
-        max-width: 300px;
-        padding-bottom: 1rem;
-    }
-    .full-service h5,
-    .delivery h5,
-    .quality h5 {
-        font-size: .9rem;
-    }
-    .full-service p,
-    .delivery p {
+    .services-p{
         font-size: .7rem;
     }
-    .quality p {
-        margin-top: 1.5rem;
-        font-size: .7rem;
+    .head-container h2{
+        font-size: 1rem;
     }
-    .landing-container {
-        flex-direction: column;
-    }
-    .text-container h1{
-        font-size: 3rem;
-    }
-    .nav-container {
-        display: none;
+    .head-container p{
+        font-size: .5rem;
     }
     .navbar-brand img {
         height: 40px;
     }
-    .logo-container img {
-        display: none;
+
+    .navbar-toggler {
+        border: none;
     }
-    footer .container h4, footer .container h5{
-        font-size: .6rem;
+
+    .navbar-toggler-icon {
+        color: #fff;
     }
-    footer .container-fluid{
-        padding: 0;
-        margin: 0;
+
+    .text-container h1 {
+        font-size: 1.5rem;
     }
-    footer .container p{
-        text-align: center;
-        font-size: 0.5rem;
-        padding: 0.1rem;
-    }
-    footer .copyright-container img, 
-    footer .copyright-container p{
-        display:none;
-    }
-    .drop-down i {
-        display: none;
-    }
-    .social-privacy {
-        display: none;
-    }
-    .para-container, .content-container{
-        width: 100vw;
-    }
-    .value-containers {
-        display: flex;
-        flex-direction: column;
-        width: fit-content;
-    }
-    .values-container{
-        width: 100%;
-    }
-    .about-container .mission,
-    .about-container .vision{
-        width: 100%;
-    }
-    .pagelanding-container h1{
-        font-size: 1.7rem;
-    }
-    .pagelanding-container img{
-        width: 8rem;
-    }
-    .mobile-menu{
-        display: block;
-    }
-    .mobile-menu a {
-        font-size: 1rem;
-        padding: 1rem;
-    }
-    .logo-container{
-        display: none;
-    }
-    .burger-container{
-        padding: .5rem;
-    }
-    
-    .container-fluid.d-flex.justify-content-evenly {
+
+    .landing-container {
         flex-direction: column;
         align-items: center;
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
     }
-    .container-md img {
-        width: 100%;
+
+    .drop-down i {
+        font-size: 2rem;
+    }
+
+    .para-container, .content-container {
+        width: 90%;
+        margin: auto;
+    }
+
+    .container-project img {
+        width: 90%;
         height: auto;
-        margin-bottom: 1rem;
+        margin-bottom: 0;
+        margin: 0 auto;
     }
-    .container-sm .text-container h3{
-        max-width: 400px;
+    .container-project {
+        width: 100%;
+    }
+
+    .project-caption {
+        width: 90%;
+        font-size: .7rem;
+        margin-top: 0;
+        margin: 0 auto;
+        text-align: justify;
+    }
+
+    .outer-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .equipment-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .boxes{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .boxes img {
+        width: 10rem;
+        height: 13rem;
+        margin: auto;
+    }
+
+    .service-caption h2{
+        font-size: 1.2rem;
         margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto;
+        text-align: center;
+        width: 15rem;
+    }
+    .para-contain{
+        font-size: .7rem;
+        margin: auto;
+    }
+    .description{
+        font-size: .7rem;
+        text-align: justify;
+    }
+
+    .p-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .service-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .text-container h3{
+        font-size: 1rem;
+        font-weight: bold;
+        display: none;
+    }
+    .service-container{
+        display: block;
+        height: 40rem;
+    }
+    .full-service h5, 
+    .delivery h5, 
+    .quality h5{
+        margin: 0 auto;
+        font-size: 1rem;
+    }
+    .full-service p, 
+    .delivery p, 
+    .quality p{
+        margin-top: 1rem;
+        margin: 0 auto;
+        font-size: .7rem;
+    }
+    .quality p{
+        margin-top: 1.5rem;
+    }
+    .full-service, 
+    .delivery, 
+    .quality{
+        margin: 0;
+    }
+    .about-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .mission h1, .vision h1{
+        font-size: 1rem;
+    }
+    .mission, .about-container .vision {
+        width: 50%;
+        margin: 0 auto;
+        font-size: .7rem;
+    }
+    .corevalues h1{
+        font-size: 1rem;
+    }
+    .value-containers{
+        display: flex;
+        flex-direction: column;
+    }
+    .values-container {
+        width: 90%;
+        margin: 1rem auto;
+        padding: 1rem;
+    }
+    .values-container p{
+        font-size: .7rem;
+    }
+    .display6{
+        font-size: 1rem;
+    }
+    .head-container h1{
+        font-size: 1.4rem;
+    }
+    .body-container span{
+        font-size: 1rem;
+    }
+    .body-container h3 {
+        font-size: 1.2rem;
+    }
+
+    .footer-cover{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: .5rem;
+    }
+    .footer-container {
+        width: 40%;
+        margin: 0 auto;
         text-align: center;
     }
-    .container-md img {
-        width: 100%;
-        height: auto;
-        margin-bottom: 1rem;
+    .footer-container h4 {
+        font-size: .8rem;
     }
-    .container-sm {
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-    } 
-    .container-sm.full-service,
-    .container-sm.delivery,
-    .container-sm.quality {
-        width: 100%;
-        margin-bottom: 1rem;
+    .footer-container h5{
+        font-size: .7rem;
+    }
+    .footer-container p {
+        font-size: .6rem;
+        text-align: justify;
+    }
+    .copyright-container {
+        margin-top: 3rem;
+        align-items: center;
+        height: 11.4rem;
     }
 }
