--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -584,16 +584,23 @@ footer .footer-container{
         text-align: center;
     }
     .find {
+        padding-left: auto;
         width: 100%;
         height: 15rem;
     }
+    .info {
+        margin-left: .8rem;
+    }
+    .address{
+        margin: 0 auto;
+    }
     .hours{
-        padding-top: auto;
+        margin: 0 auto;
         width: 100%;
         height: 8rem;
     }
     .hours p{
-        margin-left: 2rem;
+        margin: 0 auto;
     }
     .social-privacy{
         width: 100%;
