--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -61,6 +61,9 @@ body {
 .para-container, .content-container{
     font-family: 'Montserrat', sans-serif;
 }
+.para-container {
+    width: 63%;
+}
 .content-container{
     width: 50%;
 }
@@ -135,10 +138,22 @@ body {
 .text-container h3{
     width: 40rem;
     min-width: 200px;
-    margin-left: 23rem;
+    margin: 0 auto;
     margin-bottom: 3rem;
     text-align: center;
     padding: 0 1rem;
+}
+.equipment-box {
+    margin-bottom: 3rem;
+}
+.boxes {
+    width: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.boxes img {
+    width: 100rem;
 }
   
 .service-container {
@@ -289,14 +304,14 @@ footer .footer-container{
     .description {
         margin-left: auto; 
         margin-right: auto;
-        text-align: center; 
+        text-align: justify; 
         width: 80%;
     }
     .text-container h3 {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center; 
+        font-size: 1.5rem;
+        width: 30rem;
+        flex-wrap: wrap;
         margin: 0 auto;
         margin-bottom: 2rem;
     }
@@ -322,16 +337,22 @@ footer .footer-container{
     }
     .equipment-box{
         display: flex;
-        flex-direction: column;
+        height: 17rem;
+        flex-wrap: wrap;
     }
     .boxes{
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
+        width: 9.4rem;
         margin: 0 auto;
     }
+    .boxes img{
+        width: 9rem;
+        height: 100%;
+    }
     .service-container{
+        padding-top: 5rem;
         margin-left: auto;
     }
     footer .container h4, footer .container h5{
@@ -341,6 +362,12 @@ footer .footer-container{
         text-align: center;
         font-size: 0.6rem;
         padding: .2rem;
+    }
+    .head-container h1 {
+        font-size: 1.5rem;
+    }
+    .body-container h3 {
+        font-size: 1.3rem;
     }
     .drop-down i {
         display: none;
@@ -376,10 +403,6 @@ footer .footer-container{
         width: 100px;
         height: auto;
     }
-    /* .text-center{
-        width: 200px;
-        height: auto;
-    } */
     .text-center img{
         width: 6rem;
         height: auto;
