--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -54,9 +54,13 @@ body {
     margin: 0;
     padding: 0;
     background-image: url('/Images/landing-bg.png');
-    height: 100vh;
+    height: 90vh;
     font-family: 'Montserrat', sans-serif;
     background-size: cover;
+}
+.scroll {
+    width: 16rem;
+    margin-top: 2.8rem;
 }
 .para-container, .content-container{
     font-family: 'Montserrat', sans-serif;
@@ -659,4 +663,19 @@ footer .footer-container{
         justify-content: center;
         height: 7rem;
     }
+}
+
+@keyframes scrollMovement{
+    0% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-10px);
+      }
+      100% {
+        transform: translateY(0);
+      }
+}
+.move {
+    animation: scrollMovement 1.5s infinite ;
 }
