--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -97,9 +97,25 @@ body {
     color: #ffffff; 
     font-family:  'Montserrat', 'Verdana', sans-serif;
     font-size: large;
+    position: relative;
+    text-decoration: none;
+}
+.navbar-nav .nav-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px; 
+    width: 0;
+    height: 2px; 
+    background-color: #ce834d; 
+    transition: width 0.4s ease-in-out; 
+}
+.navbar-nav .nav-link:hover::after {
+    color: #ce834d;
+    width: 100%;
 }
 .navbar-nav .nav-link:hover {
-    color: #ce834d;
+    color: #ce834d; /* Change text color on hover */
 }
 
 /* heavy equipments */
@@ -275,7 +291,7 @@ footer .footer-container{
         font-size: 2rem;
     }
     .text-container h1 {
-        font-size: 3rem;
+        font-size: 2.6rem;
     }
     .para-container, .content-container {
         width: 100vw;
@@ -376,7 +392,6 @@ footer .footer-container{
         font-size: 1.3rem;
     }
     .drop-down i {
-        display: none;
         font-size: 2rem;
     }
     .values-container{
@@ -400,6 +415,13 @@ footer .footer-container{
 @media screen and (min-width: 300px) and (max-width: 426px) {
     *{
         box-sizing: border-box;
+    }
+    .scroll span {
+        height: auto;
+        margin-top: -40px;
+        display: block;
+        text-align: center;
+        font-size: .6rem;
     }
     #body-container{
         height: auto;
